syntax = "proto3";
package data_plane;

option go_package = "github.com/eth-easl/cluster_manager/api/proto";

import "common.proto";

message EndpointInfo {
  string ID = 1;
  string URL = 2;
}

message DeploymentEndpointPatch {
  ServiceInfo Service = 1;
  repeated EndpointInfo Endpoints = 2;
}

message DeploymentUpdateSuccess {
  bool Success = 1;
  string Message = 2;
}

service DpiInterface {
  rpc AddDeployment(ServiceInfo) returns (DeploymentUpdateSuccess);
  rpc UpdateEndpointList(DeploymentEndpointPatch) returns (DeploymentUpdateSuccess);
  rpc DeleteDeployment(ServiceInfo) returns (DeploymentUpdateSuccess);
}